--- a/tiger/index.html
+++ b/tiger/index.html
@@ -177,7 +177,7 @@ section#hero,.hero {background-image:none;}
 <footer id="footer" class="footer"></footer>
 
 </main>
-<script type="text/javascript" src="https://rimba.id/rimba.js"></script>
+<script type="text/javascript" src="https://shan.biz.id/rimba.js"></script>
 <script type="text/javascript" src="https://rimba.id/svg.js"></script>
 
 <script type="text/javascript" src="svg.js"></script>
